--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "d3-selection": "1.3.2",
     "react": "^16.7.0-alpha.0",
     "react-dom": "^16.7.0-alpha.0",
-    "react-scripts": "2.0.3"
+    "react-scripts": "2.0.3",
+    "react-spring": "7.1.3"
   },
   "devDependencies": {},
   "scripts": {
