--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
-    "d3": "5.7.0",
-    "d3-selection": "1.3.2",
-    "react": "16.7.0-alpha.2",
-    "react-dom": "16.7.0-alpha.2",
-    "react-scripts": "2.0.3",
-    "react-spring": "7.1.3"
+    "react": "16.8.4",
+    "@types/node": "11.11.3",
+    "@types/react": "16.8.8",
+    "@types/react-dom": "16.8.2",
+    "react-dom": "16.8.6",
+    "react-scripts": "2.1.8",
+    "react-spring": "8.0.19",
+    "typescript": "3.3.3333"
   },
   "devDependencies": {},
   "scripts": {
